works with rabbitMQ, logstash and 1 node

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,11 +1,14 @@
 input {
-	beats {
-		port => 5044
-	}
-
-	tcp {
-		port => 50000
-	}
+	rabbitmq {
+    host => "some-rabbit" # Change this to the address of your RabbitMQ server if it's not local
+    port => 5672
+    user => "guest"
+    password => "guest"
+    queue => "productQueue"
+    durable => true
+    codec => "json" # Use the json codec if your messages are in JSON format
+    # Other configurations like SSL can be added here if necessary
+  }
 }
 
 ## Add your filters / logstash plugins configuration here
