--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -15,8 +15,9 @@ input {
 
 output {
 	elasticsearch {
-		hosts => "elasticsearch:9200"
-		user => "logstash_internal"
+		hosts => "elasticsearch1:9200"
+		user => "elastic"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+    index => "product-logs"
 	}
 }
