implementeret catalog-service

--- a/catalog-service/Dockerfile
+++ b/catalog-service/Dockerfile
@@ -1,7 +1,7 @@
 # Use the official Microsoft .NET SDK image for compilation
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /app
-
+EXPOSE 80
 # Copy the csproj file and restore any dependencies (via NuGet)
 COPY *.csproj ./
 RUN dotnet restore
