lagstash input change

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,9 +1,9 @@
 input {
 	rabbitmq {
-    host => "some-rabbit" # Change this to the address of your RabbitMQ server if it's not local
+    host => "rabbitqueue" # Change this to the address of your RabbitMQ server if it's not local
     port => 5672
-    user => "guest"
-    password => "guest"
+    user => "user"
+    password => "userpass"
     queue => "productQueue"
     durable => true
     codec => "json" # Use the json codec if your messages are in JSON format
